datasets/dataset_txt/flask/flask_1600.txt
DenekUrich commented on 23 Oct 2011
Downloading/unpacking Flask (from -r requirements.txt (line 1))
  Running setup.py egg_info for package Flask
    Traceback (most recent call last):
      File "", line 14, in 
      File "/home/denekurich/Projects/langoid.com/build/Flask/setup.py", line 62
        print "Audit requires PyFlakes installed in your system."""
                                                                ^
    SyntaxError: invalid syntax
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):

  File "", line 14, in 

  File "/home/denekurich/Projects/langoid.com/build/Flask/setup.py", line 62

    print "Audit requires PyFlakes installed in your system."""

                                                            ^

SyntaxError: invalid syntax